--- a/contador-ws/src/app/globals.css
+++ b/contador-ws/src/app/globals.css
@@ -5,12 +5,14 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --primary-color: #7e55f6; 
+  --font-questrial: var(--font-questrial);
 }
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
+  --font-sans: var(--font-sans); 
   --font-mono: var(--font-geist-mono);
 }
 
@@ -24,5 +26,16 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-questrial); 
+}
+
+.text-primary {
+  color: var(--primary-color);
+}
+
+.bg-primary {
+  background-color: var(--primary-color);
+}
+.bg-primary-light {
+  background-color: rgba(126, 85, 246, 0.1);
 }
